Fix hyprland gaps

--- a/home/waybar/style.css
+++ b/home/waybar/style.css
@@ -9,7 +9,7 @@
 
 window#waybar {
     background: rgba(0, 0, 0, 1.0);
-    border-bottom: 2px solid rgba(100, 114, 125, 0.5);
+    /* border-bottom: 2px solid rgba(100, 114, 125, 0.5); */
     color: white;
 }
 
